<resources>
    <string name="app_name">Diet Meal App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">Welcome...</string>
    <string name="dont_be_empty">Don\'t be Empty</string>
    <string name="height">Height</string>
    <string name="height_colon">Height : </string>
    <string name="weight">Weight</string>
    <string name="weight_colon">Weight : </string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="you_havent_chosen">You haven\'t chosen</string>
    <string name="title_profile">Profile</string>
    <string name="title_setting">Setting</string>
    <string name="hi">Hi,</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="ready_to_some_calories_today">Ready to some calories today?</string>
    <string name="kcal">kcal</string>
    <string name="carbs">carbs</string>
    <string name="fat">fat</string>
    <string name="protein">protein</string>
    <string name="title_meal">Meals</string>
    <string name="search">Search</string>
    <string name="edit">edit</string>
    <string name="add_profile">add_profile</string>
    <string name="calories">calories</string>
    <string name="portion">Portion</string>
    <string name="serving">Serving</string>
    <string name="meals">Meals</string>
    <string name="nutrion_facts">Nutrion Facts</string>
</resources>