<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.meal.detail.DetailMealFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_meal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_solid_to_transparency"
            app:layout_constraintBottom_toBottomOf="@+id/iv_meal"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_header_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="Espresso"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:cardBackgroundColor="@color/green_malachite"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7.15"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/sub_guideline6"
                    app:layout_constraintStart_toStartOf="@+id/sub_guideline6"
                    app:layout_constraintTop_toTopOf="@+id/sub_guideline3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/sub_guideline4"
                    app:layout_constraintEnd_toStartOf="@+id/sub_guideline6"
                    app:layout_constraintStart_toStartOf="@+id/sub_guideline6"
                    app:layout_constraintTop_toBottomOf="@+id/tv_calories"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_carbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.4g"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/sub_guideline7"
                    app:layout_constraintStart_toStartOf="@+id/sub_guideline7"
                    app:layout_constraintTop_toTopOf="@+id/sub_guideline3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carbs"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/sub_guideline4"
                    app:layout_constraintEnd_toStartOf="@+id/sub_guideline7"
                    app:layout_constraintStart_toStartOf="@+id/sub_guideline7"
                    app:layout_constraintTop_toBottomOf="@+id/tv_carbs"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_protein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6.3g"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/sub_guideline8"
                    app:layout_constraintStart_toStartOf="@+id/sub_guideline8"
                    app:layout_constraintTop_toTopOf="@+id/sub_guideline3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/protein"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/sub_guideline4"
                    app:layout_constraintEnd_toStartOf="@+id/sub_guideline8"
                    app:layout_constraintStart_toStartOf="@+id/sub_guideline8"
                    app:layout_constraintTop_toBottomOf="@+id/tv_protein"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_fat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.8g"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/sub_guideline9"
                    app:layout_constraintStart_toStartOf="@+id/sub_guideline9"
                    app:layout_constraintTop_toTopOf="@+id/sub_guideline3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fat"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/sub_guideline4"
                    app:layout_constraintEnd_toStartOf="@+id/sub_guideline9"
                    app:layout_constraintStart_toStartOf="@+id/sub_guideline9"
                    app:layout_constraintTop_toBottomOf="@+id/tv_fat"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/sub_guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/sub_guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/sub_guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/sub_guideline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="16dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/sub_guideline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.20" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/sub_guideline7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.40" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/sub_guideline8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.60" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/sub_guideline9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.80" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_portion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/portion"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/iv_meal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Serving"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/serving"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/til_portion"
            app:layout_constraintTop_toTopOf="@+id/til_portion">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/at_serving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_header_nutrion_fact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nutrion_facts"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/til_portion" />

        <TextView
            android:id="@+id/title_total_fat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Total Fat"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/tv_total_fat"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_nutrion_fact" />

        <TextView
            android:id="@+id/tv_total_fat"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="4.7.6g"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/title_total_fat" />

        <TextView
            android:id="@+id/title_cholesterol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Cholesterol"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/tv_total_fat"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/title_total_fat" />

        <TextView
            android:id="@+id/tv_cholesterol"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="4.7.6g"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/title_cholesterol" />

        <TextView
            android:id="@+id/title_sodium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Sodium"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/tv_total_fat"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/title_cholesterol" />

        <TextView
            android:id="@+id/tv_sodium"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="4.7.6g"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/title_sodium" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>